--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,26 +1,40 @@
 .Container {
-    max-width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    min-height: 100%;
-    text-align: center;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
     background-color: #0bdebe;
     font-family: 'Exo', sans-serif;
 }
 .Content {
-    margin: auto;
-    margin-top: 80px;
-    display: block;
-    width: 80vw;
-    max-width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
 .Logo {
+    padding-top: 100px;
     font-weight: bold;
     display: block;
     margin: auto;
     width: fit-content;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
     color: white;
+}
+.input-field{
+    width: fit-content;
+    margin-top: 50px;
+}
+
+.buttonDiv{
+    display: flex;
+    justify-content: space-between;
+    width: fit-content;
+}
+.limitButton{
+    width: 50px;
 }
