--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -31,10 +31,12 @@
 .profile_menu{
     width: 200px;
     background-color: white;
-    height: 300px;
+    height: fit-content;
     margin-right: 5px;
     position: absolute;
     margin-top: 50px;
+    font-family: 'Exo', sans-serif;
+
 
 }
 .profile_menu::after {
@@ -51,4 +53,21 @@
     display: flex;
     justify-content: right;
     
+}
+
+.profile_img_big{
+    width: 50px;
+    height: 50px;
+}
+
+.center_content_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
+
+.back_icon{
+    margin-left: 10px;
+    margin-top: 13px;
 }
