adds feed overview page

--- a/src/components/buttons/customButtons/standardButton.css
+++ b/src/components/buttons/customButtons/standardButton.css
@@ -9,6 +9,8 @@
     padding-top: 17px;
     border-radius: 5px;
     margin-bottom: 2px;
+    text-decoration: none;
+    
 }
 
 .standardButton:hover{
