--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,6 +7,7 @@
     background-color: #0bdebe;
     font-family: 'Exo', sans-serif;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .logo{
