--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ code {
   z-index: -999;
 }
 .inner_bottom{
-  align-self: flex-end;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 10000;
 }
