--- a/src/pages/feed/feed.css
+++ b/src/pages/feed/feed.css
@@ -1,6 +1,34 @@
 .center{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.f_content{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.f_post_containter{
+    text-align: center;
+    flex-direction: row;
+    margin: 0 3% 3% 3%;
+    border-radius: 5px;
+    overflow: hidden;
+    width: auto;
+    height: fit-content;
+    max-height: 500px;
+    background-color: white;
 }
 
 .f_header{
