--- a/src/pages/feedsOverview/feedsOverview.css
+++ b/src/pages/feedsOverview/feedsOverview.css
@@ -32,7 +32,7 @@
 
 .card_div{
     width: 170px;
-    height: 100px;
+    height: 150px;
     margin-top: 50px;
 
 }
@@ -53,6 +53,16 @@
       margin-right: 1px;
       margin-left: 1px;
      
+    }
+    .grid{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .card_div{
+        width: 95%;
+        margin-top: 100px;
+
     }
   }
 
