--- a/src/pages/feedsOverview/feedsOverview.css
+++ b/src/pages/feedsOverview/feedsOverview.css
@@ -1,4 +1,4 @@
-.center{
+.center_div{
     display: flex;
     justify-content: center;
 }
@@ -18,9 +18,9 @@
     background-color: white;
     top:0px;
     border-radius: 5px;
-    position: fixed;
     overflow: scroll;
     overflow-x: hidden;
+   
 
 }
 .grid{
@@ -61,7 +61,7 @@
     }
     .card_div{
         width: 95%;
-        margin-top: 100px;
+        margin-bottom: 50px;
 
     }
   }
