--- a/src/pages/feedsOverview/feedsOverview.css
+++ b/src/pages/feedsOverview/feedsOverview.css
@@ -16,6 +16,7 @@
     height: 90%;
     width: 600px;
     background-color: white;
+    position: fixed;
     top:0px;
     border-radius: 5px;
     overflow: scroll;
