--- a/src/components/buttons/customButtons/standardButton.css
+++ b/src/components/buttons/customButtons/standardButton.css
@@ -10,10 +10,17 @@
     border-radius: 5px;
     margin-bottom: 2px;
     text-decoration: none;
+    position: relative;
     
 }
 
 .standardButton:hover{
     background-color:#1ABDA5 ;
     color: #FFFFFF;
+}
+
+.number{
+    position: absolute;
+    top:0;
+    right: 5px;
 }
