--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
   z-index: -999;
 }
 .inner_bottom{
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   right: 20px;
   z-index: 10000;
