--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -56,7 +56,39 @@
     height: fit-content;
 
 }
-
+.post{
+    font-family: 'Exo', 'sans-serif';
+}
 .text_margin{
     margin-right: 10px;
+}
+
+.collapser{
+    cursor: pointer;
+}
+
+.header_container{
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
+    text-align: start;
+    height: 50px;
+    width: 100%;
+    flex-direction: row;
+	-webkit-box-shadow: 0 2px 6px -6px black;
+	   -moz-box-shadow: 0 2px 6px -6px black;
+	        box-shadow: 0 2px 6px -6px black;
+}
+
+.profile_picture_container{
+    margin-top: 10px;
+    margin-left: 15px;
+}
+
+.header_text{
+    margin-top: 15px;
+}
+
+.comments_margin{
+    margin-left: 10px;
 }
