--- a/src/pages/feedsOverview/feedsOverview.css
+++ b/src/pages/feedsOverview/feedsOverview.css
@@ -55,6 +55,30 @@
     margin-left:10px ;
 }
 
+.file {
+    opacity: 0;
+    width: 0.1px;
+    height: 0.1px;
+    position: absolute;
+  }
+  
+
+.file-input label {
+    width: 170px;
+    height: 50px;
+    border-radius: 25px;
+    background: linear-gradient(30deg, #018786, #0bdebe);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
+    font-family: 'Exo', 'sans-serif';
+    cursor: pointer;
+    align-self: center;
+  }
+
+
 @media screen and (max-width: 600px) {
     .feeds_container {
       width: 100%;
